--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,5 +24,11 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "src/**/__tests__/*",
+    "src/**/*.test.tsx",
+    "src/**/*.spec.ts",
+    "src/test/*"
+  ]
 }
